Don't run scraper as root. Fixes #41

--- a/lib/build_docker_image/Dockerfile
+++ b/lib/build_docker_image/Dockerfile
@@ -8,11 +8,12 @@ RUN curl -sSL https://get.rvm.io | bash -s stable
 RUN echo 'source /usr/local/rvm/scripts/rvm' >> /etc/bash.bashrc
 
 RUN /bin/bash -l -c 'rvm install ruby-1.9.2-p320'
-RUN mkdir /repo /data
+RUN mkdir /repo
+RUN adduser --home /data --disabled-login --gecos "Scraper User" scraper
+
 ADD Gemfile /etc/Gemfile
 RUN /bin/bash -l -c 'bundle install --gemfile /etc/Gemfile'
 
-VOLUME /vagrant
 VOLUME /repo
 VOLUME /data
 WORKDIR /data
