Make /var/www owned by deploy user

--- a/provisioning/roles/capistrano/tasks/main.yml
+++ b/provisioning/roles/capistrano/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Ensure git is installed
   apt: pkg=git
+- name: Ensure that deploy owns /var/www
+  file: owner=deploy group=deploy path=/var/www
