Create an empty .env that will need to be filled in

--- a/provisioning/roles/scraping-platform-app/tasks/main.yml
+++ b/provisioning/roles/scraping-platform-app/tasks/main.yml
@@ -7,3 +7,5 @@
   template: src=default
             dest=/etc/apache2/sites-available/default
   notify: Restart Apache
+- name: Ensure that .env exists (but will need to be filled in by hand)
+  file: path=/var/www/shared/.env owner=deploy group=deploy state=touch
