--- a/provisioning/roles/scraping-platform-app/tasks/main.yml
+++ b/provisioning/roles/scraping-platform-app/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+# TODO Ensure that deploy user is setup first
+# TODO Ensure that apache is setup first
 - name: Ensure git is installed
   apt: pkg=git
 - name: Ensure that deploy owns /var/www
@@ -9,3 +11,11 @@
   notify: Restart Apache
 - name: Ensure that .env exists (but will need to be filled in by hand)
   file: path=/var/www/shared/.env owner=deploy group=deploy state=touch
+# TODO This is a nasty hack. Would be much nicer to do this in the capistrano
+# deploy. But security concerns (the need for passwordless sudo) make this hard.
+- name: Install foreman
+  gem: name=foreman state=present
+- name: Ensure Procfile.vagrant copied
+  copy: src=../Procfile.vagrant dest=/home/deploy/Procfile.vagrant
+- name: Ensure upstart is setup for the application
+  command: foreman export upstart /etc/init -u deploy -a scraping-platform -f /home/deploy/Procfile.vagrant --root /var/www/current
