Deploy user should use bash shell so that rvm works as expected on login

--- a/provisioning/roles/deploy-user/tasks/main.yml
+++ b/provisioning/roles/deploy-user/tasks/main.yml
@@ -1,4 +1,4 @@
 - name: Ensure we have a deploy user
-  user: name=deploy comment="Deploy user"
+  user: name=deploy comment="Deploy user" shell=/bin/bash
 - name: Ensure that mlandauer can ssh as deploy user
   authorized_key: user=deploy key="{{ lookup('file', '/Users/matthew/.ssh/scraper.pub') }}"
