--- a/provisioning/roles/scraping-platform-app/tasks/main.yml
+++ b/provisioning/roles/scraping-platform-app/tasks/main.yml
@@ -21,3 +21,9 @@
   copy: src=../Procfile.vagrant dest=/home/deploy/Procfile.vagrant
 - name: Ensure upstart is setup for the application
   command: foreman export upstart /etc/init -u deploy -a scraping-platform -f /home/deploy/Procfile.vagrant --root /var/www/current
+- name: Create sudoers ready for testing
+  template: src=sudoers dest=/etc/sudoers.d/deploy.test owner=root group=root mode=0440
+- name: Test sudoers
+  command: visudo -c -f /etc/sudoers.d/deploy.test
+- name: Make sudoers live
+  command: mv -f /etc/sudoers.d/deploy.test /etc/sudoers.d/deploy
