--- a/provisioning/roles/scraping-platform-app/tasks/main.yml
+++ b/provisioning/roles/scraping-platform-app/tasks/main.yml
@@ -27,3 +27,7 @@
   command: visudo -c -f /etc/sudoers.d/deploy.test
 - name: Make sudoers live
   command: mv -f /etc/sudoers.d/deploy.test /etc/sudoers.d/deploy
+# TODO There are serious security concerns with doing this. This will probably be improved
+# as Docker matures
+- name: Add deploy to the docker group (so it has permissions to do dockery things)
+  user: name=deploy groups=docker
