Don't set the gid

--- a/lib/build_docker_image/Dockerfile
+++ b/lib/build_docker_image/Dockerfile
@@ -9,9 +9,9 @@ RUN echo 'source /usr/local/rvm/scripts/rvm' >> /etc/bash.bashrc
 
 RUN /bin/bash -l -c 'rvm install ruby-1.9.2-p320'
 RUN mkdir /repo
-# Give the scraper user the same uid and gid as deploy on the docker server
+# Give the scraper user the same uid as deploy on the docker server
 # TODO Currently hardcoded values
-RUN adduser --home /data --disabled-login --gecos "Scraper User" --uid 1001 --gid 1003 scraper
+RUN adduser --home /data --disabled-login --gecos "Scraper User" --uid 1001 scraper
 
 ADD Gemfile /etc/Gemfile
 RUN /bin/bash -l -c 'bundle install --gemfile /etc/Gemfile'
