--- a/provisioning/roles/mysql/tasks/main.yml
+++ b/provisioning/roles/mysql/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Install mysql
   apt: pkg=mysql-server
+- name: Install bits for compiling mysql clients against
+  apt: pkg=libmysqlclient-dev
