--- a/provisioning/roles/scraping-platform-app/templates/database.yml
+++ b/provisioning/roles/scraping-platform-app/templates/database.yml
@@ -4,28 +4,20 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: scraping_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: scraping_test
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: scraping_production
 
 vagrant:
-  adapter: sqlite3
-  database: db/vagrant.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: scraping_vagrant
