--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: all
   sudo: true
+# Uncomment the user line below if you are using this playbook directly from ansible using "ansible-playbook"
+# rather than running it through vagrant
+#  user: ubuntu
   roles:
     - docker-server
     - apache-passenger
