--- a/lib/build_docker_image/Dockerfile
+++ b/lib/build_docker_image/Dockerfile
@@ -11,7 +11,8 @@ RUN /bin/bash -l -c 'rvm install ruby-1.9.2-p320'
 RUN mkdir /repo
 # Give the scraper user the same uid as deploy on the docker server
 # TODO Currently hardcoded values
-RUN adduser --home /data --disabled-login --gecos "Scraper User" --uid 1001 scraper
+RUN addgroup --gid 4243 scraper
+RUN adduser --home /data --disabled-login --gecos "Scraper User" --uid 4243 --gid 4243 scraper
 
 ADD Gemfile /etc/Gemfile
 RUN /bin/bash -l -c 'bundle install --gemfile /etc/Gemfile'
