--- a/provisioning/roles/deploy-user/tasks/main.yml
+++ b/provisioning/roles/deploy-user/tasks/main.yml
@@ -3,4 +3,4 @@
 - name: Ensure we have a deploy user with uid 4243
   user: name=deploy comment="Deploy user" shell=/bin/bash uid=4243 group=deploy
 - name: Ensure that mlandauer can ssh as deploy user
-  authorized_key: user=deploy key="{{ lookup('file', '/Users/matthew/.ssh/scraper.pub') }}"
+  authorized_key: user=deploy key="{{ lookup('file', '/Users/matthew/.ssh/id_rsa.pub') }}"
