--- a/docker_images/morph-php/php.ini
+++ b/docker_images/morph-php/php.ini
@@ -793,6 +793,7 @@ default_mimetype = "text/html"
 ;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; UNIX: "/path1:/path2"
+include_path = ".:/usr/local/lib/scraperwiki"
 ;include_path = ".:/usr/share/php"
 ;
 ; Windows: "\path1;\path2"
