--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -59,5 +59,5 @@
 # TODO: Use special_time (or at least look at using it)
 - name: Setting daily cron job for 11:40am
   cron: name="daily scraping" hour=11 minute=40 user=deploy job="cd /var/www/current && /home/deploy/.rvm/bin/rvm . do bundle exec rake app:auto_run_scrapers RAILS_ENV=production"
-
-
+- name: Install nodejs for asset precompiling
+  apt: pkg=nodejs
