Apache SSL config + SSL certificates + gitencrypt

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -5,6 +5,20 @@
   apt: pkg=git
 - name: Ensure that deploy owns /var/www
   file: owner=deploy group=deploy path=/var/www
+- name: Ensure that /etc/apache2/ssl exists
+  file: path=/etc/apache2/ssl mode=0700 state=directory
+- name: Add SSL certificate (CA)
+  copy: src=ssl/ca.pem dest=/etc/apache2/ssl/ca.pem mode=0600
+  notify: Restart Apache
+- name: Add SSL certificate (public)
+  copy: src=ssl/ssl.crt dest=/etc/apache2/ssl/ssl.crt mode=0600
+  notify: Restart Apache
+- name: Add SSL certificate (private)
+  copy: src=ssl/ssl.key.secure dest=/etc/apache2/ssl/ssl.key mode=0600
+  notify: Restart Apache
+- name: Add SSL certificate (class 1)
+  copy: src=ssl/sub.class1.server.ca.pem dest=/etc/apache2/ssl/sub.class1.server.ca.pem mode=0600
+  notify: Restart Apache
 # TODO Don't need to restart. reload would be fine.
 - name: Generate the apache config for the app
   template: src=default
@@ -15,8 +29,11 @@
             dest=/etc/apache2/sites-available/morph.io
   notify: Restart Apache
 - name: Ensure that morph.io is enabled
-  command: a2ensite morph.io
-  notify: Restart Apache  
+  command: a2ensite morph.io creates=/etc/apache2/sites-enabled/morph.io
+  notify: Restart Apache
+- name: Switch on Apache SSL support
+  command: a2enmod ssl creates=/etc/apache2/mods-enabled/ssl.load
+  notify: Restart Apache
 - name: Ensure that /var/www/shared exists
   file: path=/var/www/shared owner=deploy group=deploy state=directory
 - name: Ensure that .env exists
