--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -69,6 +69,8 @@
   apt: pkg=python-passlib
 - name: Add basic authentication password
   htpasswd: path=/var/www/shared/htpasswd name=test password=test owner=root group=www-data mode=0640
+- name: Add walkleys password
+  htpasswd: path=/var/www/shared/htpasswd name=walkleys password=journalismrocks owner=root group=www-data mode=0640
 - name: Set timezone in /etc/timezone
   copy: src=timezone dest=/etc/timezone
 - name: Update timezone
