--- a/provisioning/roles/morph-app/handlers/main.yml
+++ b/provisioning/roles/morph-app/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Restart Apache
   service: name=apache2 state=restarted
+- name: Update timezone
+  command: dpkg-reconfigure --frontend noninteractive tzdata
