--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -73,8 +73,7 @@
   htpasswd: path=/var/www/shared/htpasswd name=walkleys password=journalismrocks owner=root group=www-data mode=0640
 - name: Set timezone in /etc/timezone
   copy: src=timezone dest=/etc/timezone
-- name: Update timezone
-  command: dpkg-reconfigure --frontend noninteractive tzdata
+  notify: Update timezone
 # TODO: Use special_time (or at least look at using it)
 - name: Setting daily cron job for 10:00am
   cron: name="daily scraping" hour=10 minute=0 user=deploy job="cd /var/www/current && /home/deploy/.rvm/bin/rvm . do bundle exec rake app:auto_run_scrapers RAILS_ENV=production"
