--- a/provisioning/roles/morph-app/handlers/main.yml
+++ b/provisioning/roles/morph-app/handlers/main.yml
@@ -5,6 +5,8 @@
   command: dpkg-reconfigure --frontend noninteractive tzdata
 - name: Test sudoers and make it live
   shell: visudo -c -f /etc/sudoers.d/deploy.test && cp -f /etc/sudoers.d/deploy.test /etc/sudoers.d/deploy
-# TODO Restart morph service if this changed the /etc/init files
 - name: Export to upstart
   command: foreman export upstart /etc/init -u deploy -a morph -f /home/deploy/Procfile.production --root /var/www/current
+  notify: Restart morph service
+- name: Restart morph service
+  service: name=morph state=restarted
