Only do something if it's necessary

--- a/provisioning/roles/ruby-2.0.0-p353/tasks/main.yml
+++ b/provisioning/roles/ruby-2.0.0-p353/tasks/main.yml
@@ -32,6 +32,4 @@
 - name: Ensure ruby-2.0.0-p353 is installed through rvm
   command: /bin/sh -l -c 'rvm install ruby-2.0.0-p353 --autolibs=read-fail' creates=/home/deploy/.rvm/rubies/ruby-2.0.0-p353
   sudo_user: deploy
-- name: Make ruby-2.0.0-p353 the default
-  command: /bin/sh -l -c 'rvm alias create default ruby-2.0.0-p353'
-  sudo_user: deploy
+  notify: Make ruby-2.0.0-p353 the default
