--- a/provisioning/roles/backups/tasks/main.yml
+++ b/provisioning/roles/backups/tasks/main.yml
@@ -9,3 +9,5 @@
   copy: src=database-backup.sh dest=/usr/local/bin/database-backup.sh mode=0500
 - name: Run database backup at 6:25am
   cron: name="database backup" hour=6 minute=25 user=root job="/usr/local/bin/database-backup.sh"
+- name: Install duplicity
+  apt: pkg=duplicity
