Increase db pool size in example db config

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -18,3 +18,5 @@ production:
   database: scraping_production
   username: scraping
   password: ** a password goes here **
+  # This needs to be high to handle the concurrency in sidekiq
+  pool: 25
