--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -92,6 +92,6 @@
 - name: Do backups daily of sqlite to S3 at 4:40AM
   cron: name="duply sqlite" hour=4 minute=40 user=root job="duply sqlite backup"
   when: backups
-- name: Install redis for sidekiq background jobs
-  apt: pkg=redis-server
+- name: Don't install redis for sidekiq background jobs from apt because it's too old (2.2)
+  apt: pkg=redis-server state=absent
 
