--- a/provisioning/roles/redis/files/redis.conf
+++ b/provisioning/roles/redis/files/redis.conf
@@ -185,7 +185,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /var/lib/redis/6379
+dir /var/lib/redis
 
 ################################# REPLICATION #################################
 
