Set overcommit memory on kernel for redis

--- a/provisioning/roles/redis/tasks/main.yml
+++ b/provisioning/roles/redis/tasks/main.yml
@@ -2,6 +2,8 @@
 #
 # Adapted from https://github.com/jprichardson/ansible-redis
 #
+- name: Set os overcommit memory setting for redis
+  sysctl: name=vm.overcommit_memory value=1
 - name: ensure necessary packages installed
   apt: pkg={{ item }} state=latest
   with_items:
