--- a/provisioning/roles/swap/vars/main.yml
+++ b/provisioning/roles/swap/vars/main.yml
@@ -1,2 +1,3 @@
 # We have 1GB of ram on our server so we should allocate the same amount of swap
-swap_size: 1G
+# swap_size is in units of blocks which in this case is 1024 bytes (1kB)
+swap_size: 1M
