--- a/provisioning/roles/redis/tasks/main.yml
+++ b/provisioning/roles/redis/tasks/main.yml
@@ -29,11 +29,11 @@
 - name: make sure that /etc/redis exists
   file: path=/etc/redis state=directory mode=0755
 
-- name: make sure that /var/db/redis exists
-  file: path=/var/db/redis state=directory mode=0755 group=redis owner=redis
+- name: make sure that /var/lib/redis exists
+  file: path=/var/lib/redis state=directory mode=0755 group=redis owner=redis
 
 - name: make sure redis.log file exists
-  file: path=/var/log/redis.log owner=redis group=redis mode=0644
+  file: path=/var/log/redis.log owner=redis group=redis mode=0644 state=touch
 
 - name: copy upstart file
   copy: src=upstart.conf dest=/etc/init/redis.conf
