Add Vagrant setup for second production server
This happened because the first production server completely and utterly failed

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@
 .vagrant
 vagrant_ansible_inventory_local
 vagrant_ansible_inventory_production
+vagrant_ansible_inventory_production2
 config/database.yml
 coverage
