--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -37,7 +37,7 @@
 - name: Ensure that /var/www/shared exists
   file: path=/var/www/shared owner=deploy group=deploy state=directory
 - name: Ensure that .env exists
-  copy: src=../{{ env_file }} dest=/var/www/shared/.env owner=deploy group=deploy
+  copy: src={{ env_file }} dest=/var/www/shared/.env owner=deploy group=deploy
 # TODO This is a nasty hack. Would be much nicer to do this in the capistrano
 # deploy. But security concerns (the need for passwordless sudo) make this hard.
 - name: Install foreman
