--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -7,6 +7,12 @@
   apt: pkg=git
 - name: Ensure that deploy owns /var/www
   file: owner=deploy group=deploy path=/var/www
+- name: Generate the overall nginx config
+  template: src=nginx.conf dest=/etc/nginx/nginx.conf
+  notify: restart nginx
+- name: Generate the nginx config for the app
+  template: src=default.nginx dest=/etc/nginx/sites-available/default
+  notify: restart nginx
 #- name: Ensure that /etc/apache2/ssl exists
 #  file: path=/etc/apache2/ssl mode=0700 state=directory
 #- name: Add SSL certificate (CA)
