--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -7,12 +7,20 @@
   apt: pkg=git
 - name: Ensure that deploy owns /var/www
   file: owner=deploy group=deploy path=/var/www
+
+- name: Add SSL certificate (public)
+  copy: src=ssl/{{ server_name }}/ssl-unified.crt dest=/etc/nginx/cert.pem mode=0600
+  notify: restart nginx
+- name: Add SSL certificate (private)
+  copy: src=ssl/{{ server_name }}/ssl.key.secure dest=/etc/nginx/cert.key mode=0600
+  notify: restart nginx
 - name: Generate the overall nginx config
   template: src=nginx.conf dest=/etc/nginx/nginx.conf
   notify: restart nginx
 - name: Generate the nginx config for the app
   template: src=default.nginx dest=/etc/nginx/sites-available/default
   notify: restart nginx
+
 #- name: Ensure that /etc/apache2/ssl exists
 #  file: path=/etc/apache2/ssl mode=0700 state=directory
 #- name: Add SSL certificate (CA)
