--- a/provisioning/roles/morph-app/templates/sync.yml
+++ b/provisioning/roles/morph-app/templates/sync.yml
@@ -1,7 +1,7 @@
 # Faye
 production:
-  server: "https://faye.{{ server_name }}:4443/faye"
-  adapter_javascript_url: "https://faye.{{ server_name }}:4443/faye/faye.js"
+  server: "https://faye.{{ server_name }}/faye"
+  adapter_javascript_url: "https://faye.{{ server_name }}/faye/faye.js"
   adapter: "Faye"
   auth_token: "b43ffce0dc5477b6881e4310e784a26b716a1be36c8d69450d8c01d43ad8669f"
   async: true
