Turn on monitoring

--- a/provisioning/roles/newrelic-sysmond/tasks/main.yml
+++ b/provisioning/roles/newrelic-sysmond/tasks/main.yml
@@ -7,3 +7,5 @@
   apt: pkg=newrelic-sysmond state=present
 - name: Monitoring configuration
   copy: src=nrsysmond.cfg.secure dest=/etc/newrelic/nrsysmond.cfg owner=root group=newrelic mode=0640
+- name: Start monitoring
+  service: name=newrelic-sysmond state=started
