Tests need secret_key_base to be set to something on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm:
   - 2.0.0
+env: SECRET_KEY_BASE=859384
 
 before_script:
   - cp config/database.travis.yml config/database.yml
