Apache isn't installed any more so these were failing for me

--- a/provisioning/roles/morph-app/handlers/main.yml
+++ b/provisioning/roles/morph-app/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart Apache
-  service: name=apache2 state=restarted
+# - name: Restart Apache
+#   service: name=apache2 state=restarted
 - name: restart nginx
   service: name=nginx state=restarted
 - name: Update timezone
