--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Ensure apache is switch off
-  service: name=apache2 state=stopped
+# - name: Ensure apache is switch off
+#   service: name=apache2 state=stopped
 # TODO Ensure that deploy user is setup first
 # TODO Ensure that apache is setup first
 - name: Ensure git is installed
@@ -89,7 +89,7 @@
   template: src=database.yml dest=/var/www/shared/config/database.yml owner=deploy group=deploy
 - name: Copy across newrelic configuration
   copy: src=newrelic.yml.secure dest=/var/www/shared/config/newrelic.yml
-  notify: Restart Apache
+  # notify: Restart Apache
 - name: Dependency for following command
   apt: pkg=python-passlib
 - name: Set timezone in /etc/timezone
